

import java.util.ArrayList;


public interface Searchable {

    ArrayList search(String searchTerm);
}
