@startuml

title __JAVA-FILMDATENBANK's Class Diagram__\n

  namespace  {
    class Actor {
    }
  }
  

  namespace  {
    class Database {
    }
  }
  

  namespace  {
    class Director {
    }
  }
  

  namespace  {
    class Film {
    }
  }
  

  namespace  {
    class FilmStorage {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    abstract class Person {
    }
  }
  

  namespace  {
    class PersonStorage {
    }
  }
  

  namespace  {
    interface Searchable {
    }
  }
  

  namespace  {
    class StaticMode {
    }
  }
  

  namespace  {
    abstract class Test {
    }
  }
  

  namespace  {
    class User {
    }
  }
  

  Actor -up-|> Person
  Database o-- User : curUser
  Database o-- FilmStorage : films
  Director -up-|> Person
  Film .up.|> java.lang.Comparable
  FilmStorage .up.|> Searchable
  PersonStorage .up.|> Searchable
  StaticMode o-- Database : db
  User .up.|> java.lang.Comparable
  User -up-|> Person


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
